# rust-task-app-backend

./: .gitignore  Cargo.toml  README.md  app.db
migrations/2025-10-25-052905-0000_create_users/: up.sql
migrations/2025-10-25-052921-0000_create_tasks/: up.sql
src/: lib.rs  main.rs  schema.rs
src/models/: mod.rs  task.rs  user.rs
